fixed wrong font name

--- a/ehroller/styles/ehicons.css
+++ b/ehroller/styles/ehicons.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'Eldritch Horror Icons';
-	src: url('../fonts/ehicons.woff') format('woff');
+	src: url('../fonts/EHIcons.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 	font-display: block;
